--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Assignment Solution for Module 2</title>
+    <title>Module 2 Solution</title>
   </head>
   <body>
     <h1>Our Menu</h1>
@@ -13,44 +13,42 @@
     <div class="col-lg-4 col-md-6 col-sm-12">
       <section>
         <h2 id="chicken">Chicken</h2>
-        <ul>
-          <li>
-            Balsamic Roasted Brussels Sprouts, Butternut Squash and Chicken
-            Thighs
-          </li>
-          <li>Prosciutto-Wrapped Chicken with Garlic and Herb Cheese</li>
-          <li>Siri Pinter’s One-Pot Chicken Alfredo</li>
-          <li>Florentine Penne with Chicken</li>
-          <li>Garlic-Bread Chicken Nuggets with Balsamic Ketchup</li>
-        </ul>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta minus
+          dolor laborum! Sint rerum officiis fuga nam maiores non laborum
+          laboriosam odio commodi repellat. Iste soluta dicta adipisci alias
+          quaerat rerum dolore optio tempore excepturi laboriosam hic nesciunt
+          sint obcaecati, qui fugit consectetur repudiandae asperiores sunt
+          veniam, esse aut dolores?
+        </p>
       </section>
     </div>
 
     <div class="col-lg-4 col-md-6 col-sm-12">
       <section>
-        <h2 id="pork">Pork</h2>
-        <ul>
-          <li>Pork Cheek and Black-Eyed Pea Chili</li>
-          <li>Braised Pork with Cherry Gravy</li>
-          <li>Aleppo-Pepper-Pork-and-Fennel Sandwiches</li>
-          <li>Herb-Roasted Pork Subs with Garlicky Spinach</li>
-          <li>Chinese-Style Ribs with Guava Barbecue Sauce</li>
-          <li>Pork Medallions with Onion Marmalade</li>
-        </ul>
+        <h2 id="beef">Beef</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Est
+          repudiandae voluptatem eum ipsa. Unde expedita culpa inventore
+          deserunt sequi dolores quaerat aliquid neque amet minus? Voluptas,
+          possimus obcaecati quod labore corporis fugiat. Corporis, molestiae.
+          Iusto impedit esse in consequuntur, commodi doloribus quos delectus
+          quidem, et maxime accusamus ab adipisci officia!
+        </p>
       </section>
     </div>
 
     <div class="col-lg-4 col-md-12 col-sm-12">
       <section>
-        <h2 id="steak">Steak</h2>
-        <ul>
-          <li>Butter-Basted Rib Eye Steaks</li>
-          <li>Balsamic Marinated Flank Steak</li>
-          <li>Grilled Hanger Steak with Kimchi-Apple Slaw</li>
-          <li>Throwback Porterhouse Steaks</li>
-          <li>Minute Steak Stacks with Herbed Anchovy Butter</li>
-          <li>Grilled Skirt Steak with Salsa Verde</li>
-        </ul>
+        <h2 id="sushi">Sushi</h2>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt
+          explicabo, modi excepturi ex at nobis dicta itaque similique numquam
+          molestias sint vel tenetur maiores, laboriosam delectus quos nihil
+          incidunt aspernatur debitis mollitia sunt! Odio dolorum voluptates
+          voluptas, repudiandae ipsum deserunt ut illum similique consectetur
+          libero eligendi laboriosam porro alias est?
+        </p>
       </section>
     </div>
   </body>
